--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,6 +9,10 @@
         background-color: #f8f9fa !important;
     }
     
+    select {
+        color: black!important;
+    }
+    
     h4 {
         margin-bottom: .5rem;
         font-family: inherit;
@@ -149,14 +153,22 @@
         background-color: lightgrey
     }
     
+    mat-form-field {
+        width: 100%;
+    }
+    
+    mat-hint {
+        color: red!important
+    }
+    
     input,
     select,
     textarea {
-        background-color: rgba(222, 222, 222, 0.2);
+        /*background-color: rgba(222, 222, 222, 0.2);*/
         color: #fff;
-        border: 1px solid rgba(255, 255, 255, 0.6);
+        /*border: 1px solid rgba(255, 255, 255, 0.6);*/
         width: 100%;
-        padding: 4px;
+        /*padding: 4px;*/
         border-radius: 4px;
         outline: none;
     }
