--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,20 @@
 <header id="home">
     <div class="header_image"></div>
-    <div class="header container animate__fadeInDown">
+    <div class="header container" data-aos="zoom-in" data-aos-duration="3000">
         <p class="name">Raymond & Susan</p>
         <div class="image">
-            <img src="../../assets/img/laurel-1.png" class="animate__fadeInDown">
+            <img src="../../assets/img/laurel-1.png">
         </div>
         <p class="small_name mt-5">5 <sup>th</sup> December, 2020</p>
     </div>
 </header>
 <app-menu></app-menu>
-<!-- <app-main-nav></app-main-nav> -->
 <section class="container mt-5" id="couple">
     <header>
         <h1 class="text-center head animate__backInLeft">Groom & Bride</h1>
     </header>
     <div class="row mt-4 mb-4">
-        <div class="col-md-6 mb-5">
+        <div class="col-md-6 mb-5" data-aos="flip-right">
             <div>
                 <img class="card-img-top " src="../../assets/img/groom.jpg" alt="Card image">
                 <div class="card-body">
@@ -27,7 +26,7 @@
                 <app-icon></app-icon>
             </div>
         </div>
-        <div class="col-md-6  mb-5">
+        <div class="col-md-6  mb-5" data-aos="flip-right">
             <div>
                 <img class="card-img-top" src="../../assets/img/bride.jpg" alt="Card image">
                 <div class="card-body">
@@ -47,7 +46,7 @@
             <h1 class="text-center head p-5 ">Wedding Events</h1>
         </header>
         <div class="row mb-5">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-12" data-aos="fade-right" data-aos-duration="2000">
                 <h4>Wedding Party</h4>
                 <span>Church End, Hendon, London, UK</span> <br>
                 <span>20 Dec 2018, 9AM - 6PM</span>
@@ -56,12 +55,12 @@
                     augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.
                 </p>
             </div>
-            <div class="col-md-5 col-sm-12 image">
+            <div class="col-md-5 col-sm-12 image" data-aos="fade-left" data-aos-duration="2000">
                 <img src="../../assets/img/wedding-party.jpg" alt="" srcset="">
             </div>
         </div>
         <div class="row">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-12" data-aos="fade-right" data-aos-duration="3000">
                 <h4>Reception</h4>
                 <span><i></i>Church End, Hendon, London, UK</span> <br>
                 <span><i></i>20 Dec 2018, 9AM - 6PM</span>
@@ -71,17 +70,16 @@
                 </p>
             </div>
             <div class="col-md-5 col-sm-12 image">
-                <img src="../../assets/img//reception.jpg" alt="" srcset="">
+                <img src="../../assets/img//reception.jpg" alt="" data-aos="fade-left" data-aos-duration="3000">
             </div>
         </div>
-
     </div>
 </section>
 <section class="container" id="people">
-    <header class="animate__backInDown">
+    <header>
         <h1 class="text-center head p-5">Groomsmen & Bridesmaids</h1>
     </header>
-    <div class="row" id="prevs_slide">
+    <div class="row" id="prevs_slide" data-aos="fade-left">
         <div class="col-md-4">
             <div class="border">
                 <img class="card-img-top" src="../../assets/img/bride-maid-1.jpg" alt="Card image">
@@ -116,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div class="row " id='nexts_slide'>
+    <div class="row " id='nexts_slide' data-aos="fade-left">
         <div class="col-md-4">
             <div class="border">
                 <img class="card-img-top" src="../../assets/img/groom-men-1.jpg" alt="Card image">
@@ -130,8 +128,6 @@
         </div>
         <div class="col-md-4">
             <div class="border">
-
-
                 <img class="card-img-top" src="../../assets/img/groom-men-2.jpg" alt="Card image">
                 <div class="card-body">
                     <p class=" text-center">Kevin Johnston</p>
@@ -175,50 +171,65 @@
             </div>
             <div class="col-md-12 images mt-5">
             </div>
-
         </div>
     </div>
 </section>
 <footer id="rsvp">
     <div class="bg_image p-5">
         <header class="text-center head text-white p-5">Join Our Party</header>
-        <div class="container d-flex justify-content-center">
-            <form class="row" style="width:690px">
-
+        <div class="container d-flex justify-content-center" data-aos="fade-down">
+            <form class="row" [formGroup]="submitForm" (ngSubmit)="sendEmail()" style="width:690px">
                 <div class="col-md-6 input_form">
-                    <label for="name">Name</label><br>
-                    <input type="text">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Name *</mat-label>
+                        <input matInput type="text" formControlName="name">
+                        <mat-hint *ngIf="submitted && submitForm.controls['name'].invalid">This is a required field.</mat-hint>
+                    </mat-form-field>
                 </div>
                 <div class="col-md-6 input_form">
-                    <label for="email">Email</label><br>
-                    <input type="email" name="email">
-                </div>
-
-                <div class="form-group col-md-6">
-                    <label for="sel1">Number of Guests</label>
-                    <select>
-                    <option>One</option>
-                    <option>Two</option>
-                    <option>Three</option>
-                    </select>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Email *</mat-label>
+                        <input matInput type="email" formControlName="email">
+                        <mat-hint *ngIf="submitted && submitForm.controls['email'].invalid ">This is a required field.</mat-hint>
+                    </mat-form-field>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="sel1">I am Attending</label>
-                    <select>
-                          <option>All events</option>
-                          <option>Wedding Carremony</option>
-                          <option>Reception Party</option>
-                    </select>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Cars</mat-label>
+                        <select matNativeControl required>
+                        <option>One</option>
+                        <option>Two</option>
+                        <option>Three</option>
+                      </select>
+                    </mat-form-field>
+
+                </div>
+                <div class="form-group col-md-6">
+
+                    <mat-form-field appearance="outline">
+                        <mat-label>Cars</mat-label>
+                        <select matNativeControl required>
+                            <option>All events</option>
+                            <option>Wedding Carremony</option>
+                            <option>Reception Party</option>
+                        </select>
+                    </mat-form-field>
+
                 </div>
                 <div class="form-group col-md-12">
-                    <label for="comment">Your Message</label>
-                    <textarea rows="5" id="comment"></textarea>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Message *</mat-label>
+                        <textarea matInput rows="10" cols="30" formControlName="message"></textarea>
+                        <mat-hint *ngIf="submitted && submitForm.controls['message'].invalid ">This is a required field.</mat-hint>
+                    </mat-form-field>
                 </div>
-                <div class="col-md-12 d-flex justify-content-center"><button type="button" class="btn btn-danger d-flex ">SEND</button></div>
+                <div class="col-md-12 d-flex justify-content-center">
+                    <button class="btn btn-primary" type="submit">Send</button>
+                </div>
             </form>
+
         </div>
     </div>
-
     <section class="text-center " style="padding: 20px;">
         <p> © Wonderful Wedding. All rights reserved.</p>
         <p>Design - TemplateFlip</p>
