--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,12 +1,12 @@
     * {
         box-sizing: border-box;
     }
-
+    
     body {
         margin: 0;
         padding: 0;
     }
-
+    
     .navbar {
         display: flex;
         justify-content: space-between;
@@ -14,7 +14,7 @@
         background-color: #f8f9fa !important;
         color: white;
     }
-
+    
     .brand-title p {
         color: black;
         text-transform: capitalize;
@@ -23,21 +23,21 @@
         margin: .5rem;
         letter-spacing: 0;
     }
-
+    
     .brand-title {
         display: flex;
     }
-
+    
     .navbar-links ul {
         margin: 0;
         padding: 0;
         display: flex;
     }
-
+    
     .navbar-links li {
         list-style: none;
     }
-
+    
     .navbar-links li a {
         text-decoration: none;
         letter-spacing: 3px;
@@ -48,11 +48,11 @@
         display: block;
         font-weight: 600;
     }
-
+    
     .navbar-links li a:hover {
         color: #555;
     }
-
+    
     .toggle-button {
         position: absolute;
         top: .75rem;
@@ -66,14 +66,14 @@
         padding: 7px;
         border-color: rgba(0, 0, 0, 0.1);
     }
-
+    
     .toggle-button .bar {
         height: 3px;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: black;
         border-radius: 10px;
     }
-
+    
     @media (max-width:892px) {
         .toggle-button {
             display: flex
@@ -101,181 +101,33 @@
             text-align: center
         }
     }
-
+    
     .logo {
         color: rgb(226, 226, 226);
         text-transform: uppercase;
         letter-spacing: 5px;
         font-size: 20px;
     }
-
+    
     .love_logo {
         display: flex;
     }
-
+    
     .fa {
         color: #f26147;
         font-size: 46px;
         animation: pulse 0.7s ease infinite;
     }
-
+    
     .fixed_menu {
         position: fixed;
         top: 0;
         width: 100%;
         z-index: 1020;
     }
-
+    
     @media (min-width: 992px) {
         .container {
             max-width: 960px;
         }
     }
-    /* .love_logo p {
-        font-size: 16px;
-        color: black;
-        letter-spacing: 1px;
-        text-transform: capitalize;
-        font-family: "Dosis", sans-serif;
-    } */
-    /* * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    background-color: #f8f9fa !important;
-    font-family: 'Poppins', sans-serif;
-}
-
-
-
-
-
-.nav-links {
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-}
-
-.nav-links a {
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: 500;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.nav-links li {
-    list-style: none;
-}
-
-.burger,
-.mobile_burger {
-    display: none;
-}
-
-.burger div,
-.mobile_burger div {
-    width: 25px;
-    height: 5px;
-    background-color: dimgrey;
-    margin: 5px;
-    transition: all 0.3s ease;
-}
-
-.love_logo {
-    display: flex;
-}
-
-.fa {
-    color: #f26147;
-    font-size: 46px;
-    animation: pulse 1s ease infinite;
-}
-
-.love_logo p {
-    line-height: 3;
-    font-size: 16px;
-    color: black;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    font-family: "Dosis", sans-serif;
-}
-
-.mobile_burger {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-}
-
-@media only screen and(max-width:1024px) {
-    .nav-links {
-        width: 60%;
-    }
-}
-
-@media only screen and (max-width: 988px) {
-    .nav-links {
-        position: absolute;
-        right: 0px;
-        height: 100vh;
-        top: 0;
-        background-color: #5D4954;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-        z-index: 1000;
-    }
-    .nav-links li {
-        opacity: 0;
-    }
-    .burger,
-    .mobile_burger {
-        display: block;
-    }
-}
-
-.open {
-    transform: translateY(0px);
-}
-
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-.toogle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toogle .line2 {
-    opacity: 0;
-}
-
-.toogle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-}
-
-.line_1 {
-    transform: rotate(-43deg) translate(-3px, 1px);
-    ;
-}
-
-.line_3 {
-    transform: rotate(43deg) translate(-5px, -6px);
-} */
