--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~animate.css/animate.min';
+@import "~aos/dist/aos.css";
 html,
 body {
     height: 100%;
